<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_sm"
    tools:context=".input_2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/text_xl"
        android:layout_marginBottom="@dimen/margin_lg"
        android:text="@string/form_title" />

    <EditText
        android:id="@+id/editTextNIM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_email_hint"
        android:inputType="textEmailAddress" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/hadir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_phone_hint"
        android:inputType="phone" />

    <EditText
        android:id="@+id/tugas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/uts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_uts"
        android:inputType="phone" />

    <EditText
        android:id="@+id/uas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_uas"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:text="proses hitung nilai akhir"
        android:onClick="aksi"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:text="BERSIHKAN"
        android:onClick="aksi"/>

    <TextView
        android:id="@+id/hasil"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:textAlignment="center"
        android:background="@drawable/background"
        android:paddingTop="5dp" />

    <TextView
        android:id="@+id/keterangan"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:textAlignment="center"
        android:background="@drawable/background"
        android:paddingTop="5dp" />

    <Button
        android:id="@+id/idButtonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/button_reg_save" />


</LinearLayout>